--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
+cryptography==44.0.0
 Django==5.1.5
 django-cors-headers==4.6.0
 django-debug-toolbar==5.0.1
@@ -8,8 +10,11 @@ djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 ecdsa==0.19.0
 idna==3.10
+jwcrypto==1.5.6
+pillow==11.1.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
+pycparser==2.22
 PyJWT==2.10.1
 python-decouple==3.8
 python-jose==3.3.0
